update readme and create notebooks

--- a/test.ipynb
+++ b/test.ipynb
@@ -14,156 +14,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_pickle(\"./data/0_log_raw.pkl\")\n",
+    "df = pd.read_pickle(\"./data/1_logs_org_a2.pkl\")\n",
     "df = df.sort_values([\"case_seq_num\", \"timestamp\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(453, 1740)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "cases_before = df[\"case_seq_num\"].nunique()\n",
+    "df = df.sort_values([\"case_seq_num\", \"timestamp\"])\n",
+    "df = df.groupby(\"case_seq_num\").filter(lambda trace: trace[\"concept_name\"].iloc[-1] == \"Completed\").reset_index(drop=True)\n",
+    "cases_after = df[\"case_seq_num\"].nunique()\n",
+    "dropped = cases_before - cases_after\n",
+    "dropped, cases_before\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pm4py.objects.log.util import dataframe_utils\n",
+    "\n",
+    "def clean_df(df):\n",
+    "    \"\"\"\n",
+    "        Takes df as input, returns a new df cleaned by:\n",
+    "        map lifecycle transitions into new names (to reduce noise)\n",
+    "        drop consecutive duplicates of lifecycle transition in the same case's trace\n",
+    "        Sort by case_seq_num, timestamp\n",
+    "        Change column names\n",
+    "    \"\"\"\n",
+    "    mapping = {\n",
+    "        \"Assigned\": \"assignment\",\n",
+    "        \"Awaiting Assignment\": \"assignment\",\n",
+    "\n",
+    "        \"In Progress\": \"work\",\n",
+    "\n",
+    "        \"Wait - Implementation\": \"wait\",\n",
+    "        \"Wait\": \"wait\",\n",
+    "        \"Wait - User\": \"wait\",\n",
+    "        \"Wait - Vendor\": \"wait\",\n",
+    "\n",
+    "        \"Resolved\": \"close\",\n",
+    "        \"Closed\": \"close\",\n",
+    "        \"In Call\": \"close\",\n",
+    "\n",
+    "        \"Cancelled\": \"cancelled\",\n",
+    "    }\n",
+    "\n",
+    "    df[\"lifecycle_transition\"] = df[\"lifecycle_transition\"].map(mapping)\n",
+    "\n",
+    "    cases_before = df[\"case_seq_num\"].nunique()\n",
+    "    df = df.sort_values([\"case_seq_num\", \"timestamp\"])\n",
+    "    df = df.groupby(\"case_seq_num\").filter(lambda trace: trace[\"lifecycle_transition\"].iloc[-1] == \"close\").reset_index(drop=True)\n",
+    "    cases_after = df[\"case_seq_num\"].nunique()\n",
+    "    dropped = cases_before - cases_after\n",
+    "    print(f\"Dropped {dropped} cases out of {cases_before}  for not having CLOSE as end LIFECYCLE \")\n",
+    "\n",
+    "    df = df[df[\"lifecycle_transition\"].ne(df.groupby(\"case_seq_num\")[\"lifecycle_transition\"].shift())].reset_index(drop=True)\n",
+    "    df = df[[\"case_seq_num\", \"lifecycle_transition\", \"timestamp\"]]\n",
+    "    df = df.rename(columns={\n",
+    "        \"case_seq_num\": \"case:concept:name\",\n",
+    "        \"lifecycle_transition\": \"concept:name\",\n",
+    "        \"timestamp\": \"time:timestamp\"\n",
+    "    })\n",
+    "    df = df.sort_values([\"case:concept:name\", \"concept:name\", \"time:timestamp\"])\n",
+    "    df = dataframe_utils.convert_timestamp_columns_in_df(df)\n",
+    "\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def get_most_common_trace(df):\n",
+    "    df = df.sort_values([\"case:concept:name\", \"time:timestamp\"])\n",
+    "    trace_variants=  (\n",
+    "        df.groupby(\"case:concept:name\")[\"concept:name\"].apply(lambda seq:tuple(seq))\n",
+    "    )\n",
+    "    variants_counts = trace_variants.value_counts()\n",
+    "    top10 = variants_counts.head(10)\n",
+    "    return top10\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dropped 11 cases out of 7554 (0.1%)\n"
+      "Dropped 453 cases out of 1740  for not having CLOSE as end LIFECYCLE \n",
+      "Dropped 969 cases out of 6080  for not having CLOSE as end LIFECYCLE \n"
      ]
-    }
-   ],
-   "source": [
-    "df = df.sort_values([\"case_seq_num\", \"timestamp\"])\n",
-    "cases_before = df[\"case_seq_num\"].nunique()\n",
-    "df_fil = df.groupby(\"case_seq_num\").filter(lambda x: len(x) > 2)\n",
-    "\n",
-    "cases_after = df_fil[\"case_seq_num\"].nunique()\n",
-    "dropped = cases_before - cases_after\n",
-    "pct_dropped = dropped / cases_before * 100\n",
-    "print(f\"Dropped {dropped} cases out of {cases_before} ({pct_dropped:.1f}%)\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "last_activity\n",
-       "Completed    7546\n",
+       "concept:name\n",
+       "(assignment, work, close)                            293\n",
+       "(work, close)                                        167\n",
+       "(assignment, work, wait, close)                      132\n",
+       "(work, wait, close)                                   76\n",
+       "(work, assignment, work, assignment, work, close)     62\n",
+       "(work, assignment, work, close)                       52\n",
+       "(assignment, work, assignment, work, close)           52\n",
+       "(assignment, work, assignment, work, wait, close)     44\n",
+       "(work, assignment, work, wait, close)                 30\n",
+       "(assignment, work, wait, work, close)                 21\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "last_events = (\n",
-    "    df_fil.groupby(\"case_seq_num\")[\"concept_name\"]\n",
-    "      .last()\n",
-    "      .reset_index(name=\"last_activity\")\n",
-    ")\n",
-    "last_events[\"last_activity\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import pm4py\n",
-    "\n",
-    "# helpers to go from pandas ⇢ event log\n",
-    "from pm4py.objects.log.util import dataframe_utils\n",
-    "from pm4py.objects.conversion.log import converter as log_converter\n",
-    "\n",
-    "# discovery, conformance, visualization\n",
-    "from pm4py.algo.discovery.inductive import factory as inductive_miner\n",
-    "from pm4py.algo.conformance.alignments import factory as align_factory\n",
-    "from pm4py.visualization.petrinet import factory as vis_factory\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pm4py\n",
-    "import pandas as pd\n",
-    "from pm4py.objects.conversion.log import converter as log_converter\n",
-    "from pm4py.objects.log.util import dataframe_utils\n",
-    "from pm4py.algo.conformance.alignments.petri_net.algorithm import apply as alignments_apply\n",
-    "from pm4py.objects.conversion.log.variants.to_event_log import Parameters\n",
-    "from pm4py.algo.discovery.inductive import algorithm as inductive_miner\n",
-    "from pm4py.algo.discovery.inductive.algorithm import apply as inductive_apply\n",
-    "from pm4py.objects.conversion.process_tree.variants.to_petri_net import apply as pt_to_petri\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pm4py.algo.conformance.alignments.petri_net.algorithm import apply as alignments_apply\n",
-    "fitness_A2_on_C = alignments_apply(a_lg, c_net, c_initial_marking, c_final_marking)[0][\"fitness\"]\n",
-    "fitness_C_on_A2 = alignments_apply(c_lg,  a_net, a_initial_marking, a_final_marking)[0][\"fitness\"]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fitness_A2_on_C, fitness_C_on_A2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pm4py.algo.evaluation.precision.algorithm import apply as precision_apply, Variants as PrecisionVariants\n",
+    "df_org_a2 = pd.read_pickle(\"./data/1_logs_org_a2.pkl\")\n",
+    "df_org_c = pd.read_pickle(\"./data/1_logs_org_c.pkl\")\n",
     "\n",
     "\n",
-    "prec_A2_on_C = precision_apply(\n",
-    "    a_lg, c_net, a_initial_marking, a_final_marking,\n",
-    "    variant=PrecisionVariants.ETCONFORMANCE_TOKEN\n",
-    ")\n",
-    "prec_C_on_A2 = precision_apply(\n",
-    "    c_lg, a_net, c_initial_marking, c_final_marking,\n",
-    "    variant=PrecisionVariants.ETCONFORMANCE_TOKEN\n",
-    ")\n",
     "\n",
-    "print(f\"Token-based precision A2→C: {prec_A2_on_C:.3f}\")\n",
-    "print(f\"Token-based precision C→A2: {prec_C_on_A2:.3f}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# after you have a_net, c_net\n",
-    "transitions_A2 = {t.label for t in a_net.transitions if t.label}\n",
-    "transitions_C  = {t.label for t in c_net.transitions  if t.label}\n",
-    "print(\"Activities in A2 not in C:\", transitions_A2 - transitions_C)\n",
-    "print(\"Activities in C not in A2:\", transitions_C  - transitions_A2)\n",
-    "print(f\"A2 model: {len(a_net.places)} places, {len(a_net.transitions)} transitions\")\n",
-    "print(f\"C  model: {len(c_net.places)} places, {len(c_net.transitions)} transitions\")\n"
+    "#cleaning\n",
+    "cleaned_a2 = clean_df(df_org_a2)\n",
+    "cleaned_c = clean_df(df_org_c)\n",
+    "\n",
+    "a2_common_trace = get_most_common_trace(cleaned_a2)\n",
+    "a2_common_trace"
    ]
   },
   {
