--- a/test3.ipynb
+++ b/test3.ipynb
@@ -53,12 +53,431 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_pickle(\"./data/1_logs_org_c.pkl\")\n",
-    "df.to_csv(\"org_c_logs.csv\")"
+    "# df.to_csv(\"org_c_logs.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>org_group</th>\n",
+       "      <th>res_country</th>\n",
+       "      <th>org_country</th>\n",
+       "      <th>org_res</th>\n",
+       "      <th>org_involved</th>\n",
+       "      <th>org_role</th>\n",
+       "      <th>concept_name</th>\n",
+       "      <th>impact</th>\n",
+       "      <th>product</th>\n",
+       "      <th>lifecycle_transition</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>case_seq_num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1686</th>\n",
+       "      <td>D2</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>nl</td>\n",
+       "      <td>David</td>\n",
+       "      <td>Org line C</td>\n",
+       "      <td>A2_1</td>\n",
+       "      <td>Accepted</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>PROD542</td>\n",
+       "      <td>In Progress</td>\n",
+       "      <td>2012-01-19 13:10:43+00:00</td>\n",
+       "      <td>1-647953636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1687</th>\n",
+       "      <td>D2</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>nl</td>\n",
+       "      <td>David</td>\n",
+       "      <td>Org line C</td>\n",
+       "      <td>A2_1</td>\n",
+       "      <td>Accepted</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>PROD542</td>\n",
+       "      <td>In Progress</td>\n",
+       "      <td>2012-01-19 13:10:57+00:00</td>\n",
+       "      <td>1-647953636</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     org_group res_country org_country org_res org_involved org_role  \\\n",
+       "1686        D2     Belgium          nl   David   Org line C     A2_1   \n",
+       "1687        D2     Belgium          nl   David   Org line C     A2_1   \n",
+       "\n",
+       "     concept_name  impact  product lifecycle_transition  \\\n",
+       "1686     Accepted  Medium  PROD542          In Progress   \n",
+       "1687     Accepted  Medium  PROD542          In Progress   \n",
+       "\n",
+       "                     timestamp case_seq_num  \n",
+       "1686 2012-01-19 13:10:43+00:00  1-647953636  \n",
+       "1687 2012-01-19 13:10:57+00:00  1-647953636  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df[\"case_seq_num\"] == \"1-647953636\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1-647953636',\n",
+       " '1-651324866',\n",
+       " '1-654423931',\n",
+       " '1-655021441',\n",
+       " '1-686885675',\n",
+       " '1-687329729',\n",
+       " '1-687710013',\n",
+       " '1-691129791',\n",
+       " '1-692758994',\n",
+       " '1-696915401',\n",
+       " '1-697478298',\n",
+       " '1-699262145',\n",
+       " '1-699719677',\n",
+       " '1-700135371',\n",
+       " '1-700205396',\n",
+       " '1-703263656',\n",
+       " '1-705847078',\n",
+       " '1-706845546',\n",
+       " '1-707196413',\n",
+       " '1-707807221',\n",
+       " '1-709804068',\n",
+       " '1-709831036',\n",
+       " '1-712891909',\n",
+       " '1-712979761',\n",
+       " '1-717126508',\n",
+       " '1-717228961',\n",
+       " '1-717764374',\n",
+       " '1-717770354',\n",
+       " '1-717854005',\n",
+       " '1-718162127',\n",
+       " '1-718977997',\n",
+       " '1-720016461',\n",
+       " '1-720162489',\n",
+       " '1-720413010',\n",
+       " '1-722053011',\n",
+       " '1-722180065',\n",
+       " '1-722180141',\n",
+       " '1-722261790',\n",
+       " '1-722485381',\n",
+       " '1-726528943',\n",
+       " '1-726747811',\n",
+       " '1-728308361',\n",
+       " '1-728423732',\n",
+       " '1-728449782',\n",
+       " '1-729278754',\n",
+       " '1-729371940',\n",
+       " '1-729423561',\n",
+       " '1-729440375',\n",
+       " '1-729473091',\n",
+       " '1-729654566',\n",
+       " '1-729769620',\n",
+       " '1-729830322',\n",
+       " '1-729857533',\n",
+       " '1-729910993',\n",
+       " '1-730018116',\n",
+       " '1-730040641',\n",
+       " '1-730040885',\n",
+       " '1-730067183',\n",
+       " '1-730077100',\n",
+       " '1-730081514',\n",
+       " '1-730561221',\n",
+       " '1-730655701',\n",
+       " '1-730694495',\n",
+       " '1-730737297',\n",
+       " '1-730835217',\n",
+       " '1-730997166',\n",
+       " '1-731064788',\n",
+       " '1-731102081',\n",
+       " '1-731235386',\n",
+       " '1-732011816',\n",
+       " '1-732017153',\n",
+       " '1-732027653',\n",
+       " '1-732193663',\n",
+       " '1-732202511',\n",
+       " '1-732218663',\n",
+       " '1-732226133',\n",
+       " '1-732526526',\n",
+       " '1-732852191',\n",
+       " '1-732875748',\n",
+       " '1-732892273',\n",
+       " '1-733240253',\n",
+       " '1-733266204',\n",
+       " '1-733360125',\n",
+       " '1-733362771',\n",
+       " '1-733418076',\n",
+       " '1-734697476',\n",
+       " '1-734734063',\n",
+       " '1-734796496',\n",
+       " '1-734815385',\n",
+       " '1-734847634',\n",
+       " '1-734968198',\n",
+       " '1-734994398',\n",
+       " '1-735006290',\n",
+       " '1-735040184',\n",
+       " '1-735082484',\n",
+       " '1-735086187',\n",
+       " '1-735086266',\n",
+       " '1-735104477',\n",
+       " '1-735117242',\n",
+       " '1-735128441',\n",
+       " '1-735133142',\n",
+       " '1-735162254',\n",
+       " '1-735162430',\n",
+       " '1-735171475',\n",
+       " '1-735177718',\n",
+       " '1-735177737',\n",
+       " '1-735177767',\n",
+       " '1-735177798',\n",
+       " '1-735177829',\n",
+       " '1-735203157',\n",
+       " '1-735262468',\n",
+       " '1-735262744',\n",
+       " '1-736290060',\n",
+       " '1-736370015',\n",
+       " '1-736478998',\n",
+       " '1-736491238',\n",
+       " '1-736499291',\n",
+       " '1-736517053',\n",
+       " '1-736561851',\n",
+       " '1-736598835',\n",
+       " '1-736640460',\n",
+       " '1-736658581',\n",
+       " '1-736673112',\n",
+       " '1-736673532',\n",
+       " '1-736676599',\n",
+       " '1-736685322',\n",
+       " '1-736685723',\n",
+       " '1-736690605',\n",
+       " '1-736719999',\n",
+       " '1-736726561',\n",
+       " '1-737308943',\n",
+       " '1-737309015',\n",
+       " '1-737313112',\n",
+       " '1-737313492',\n",
+       " '1-737313674',\n",
+       " '1-737333490',\n",
+       " '1-737346077',\n",
+       " '1-737355932',\n",
+       " '1-737362805',\n",
+       " '1-737375452',\n",
+       " '1-737379631',\n",
+       " '1-737379713',\n",
+       " '1-737406217',\n",
+       " '1-737414629',\n",
+       " '1-737460767',\n",
+       " '1-737464026',\n",
+       " '1-737464711',\n",
+       " '1-738146751',\n",
+       " '1-738147262',\n",
+       " '1-738149109',\n",
+       " '1-738156956',\n",
+       " '1-738157925',\n",
+       " '1-738162209',\n",
+       " '1-738189425',\n",
+       " '1-738189512',\n",
+       " '1-738220295',\n",
+       " '1-738233372',\n",
+       " '1-738242595',\n",
+       " '1-738246906',\n",
+       " '1-738260464',\n",
+       " '1-738271042',\n",
+       " '1-738289120',\n",
+       " '1-738387528',\n",
+       " '1-738387796',\n",
+       " '1-738400208',\n",
+       " '1-738408332',\n",
+       " '1-738410373',\n",
+       " '1-738436239',\n",
+       " '1-738436894',\n",
+       " '1-738444996',\n",
+       " '1-738448897',\n",
+       " '1-738452111',\n",
+       " '1-738457041',\n",
+       " '1-738467971',\n",
+       " '1-738479350',\n",
+       " '1-738482543',\n",
+       " '1-738490777',\n",
+       " '1-738491308',\n",
+       " '1-738496653',\n",
+       " '1-738532339',\n",
+       " '1-738543481',\n",
+       " '1-738554303',\n",
+       " '1-738570563',\n",
+       " '1-738590475',\n",
+       " '1-738631077',\n",
+       " '1-738651085',\n",
+       " '1-738651324',\n",
+       " '1-738651383',\n",
+       " '1-738681771',\n",
+       " '1-738699512',\n",
+       " '1-738699585',\n",
+       " '1-738723584',\n",
+       " '1-738762640',\n",
+       " '1-738778294',\n",
+       " '1-738806096',\n",
+       " '1-738808026',\n",
+       " '1-738820217',\n",
+       " '1-738821862',\n",
+       " '1-738894209',\n",
+       " '1-738894279',\n",
+       " '1-738894310',\n",
+       " '1-738897556',\n",
+       " '1-738897597',\n",
+       " '1-738897648',\n",
+       " '1-739177207',\n",
+       " '1-739177590',\n",
+       " '1-739177687',\n",
+       " '1-739195932',\n",
+       " '1-739196774',\n",
+       " '1-739197153',\n",
+       " '1-739197764',\n",
+       " '1-739213508',\n",
+       " '1-739227536',\n",
+       " '1-739227550',\n",
+       " '1-739227746',\n",
+       " '1-739227761',\n",
+       " '1-739228360',\n",
+       " '1-739248008',\n",
+       " '1-739265645',\n",
+       " '1-739331094',\n",
+       " '1-739331380',\n",
+       " '1-739333517',\n",
+       " '1-739336265',\n",
+       " '1-739337228',\n",
+       " '1-739400698',\n",
+       " '1-739415217',\n",
+       " '1-739425940',\n",
+       " '1-739472361',\n",
+       " '1-739479711',\n",
+       " '1-739485214',\n",
+       " '1-739512617',\n",
+       " '1-739524515',\n",
+       " '1-739524720',\n",
+       " '1-739525417',\n",
+       " '1-739548838',\n",
+       " '1-739599576',\n",
+       " '1-739642918',\n",
+       " '1-739643571',\n",
+       " '1-739688521',\n",
+       " '1-739688614',\n",
+       " '1-739716264',\n",
+       " '1-739733281',\n",
+       " '1-739733298',\n",
+       " '1-739749755',\n",
+       " '1-739749802',\n",
+       " '1-739749820',\n",
+       " '1-739771431',\n",
+       " '1-739782283',\n",
+       " '1-739800101',\n",
+       " '1-739821679',\n",
+       " '1-739821873',\n",
+       " '1-739823295',\n",
+       " '1-739823372',\n",
+       " '1-739846111',\n",
+       " '1-739846371',\n",
+       " '1-740285665',\n",
+       " '1-740293061',\n",
+       " '1-740293761',\n",
+       " '1-740299911',\n",
+       " '1-740299941',\n",
+       " '1-740344932',\n",
+       " '1-740357708',\n",
+       " '1-740364593',\n",
+       " '1-740387864',\n",
+       " '1-740413739',\n",
+       " '1-740443901',\n",
+       " '1-740443984',\n",
+       " '1-740449730',\n",
+       " '1-740449736',\n",
+       " '1-740455245',\n",
+       " '1-740455673',\n",
+       " '1-740460458',\n",
+       " '1-740460649',\n",
+       " '1-740461532',\n",
+       " '1-740534878',\n",
+       " '1-740538062',\n",
+       " '1-740542342',\n",
+       " '1-740596231',\n",
+       " '1-740597381',\n",
+       " '1-740597399',\n",
+       " '1-740610803',\n",
+       " '1-740630195',\n",
+       " '1-740630613',\n",
+       " '1-740632381',\n",
+       " '1-740638047',\n",
+       " '1-740641837',\n",
+       " '1-740648620',\n",
+       " '1-740676879',\n",
+       " '1-740684551',\n",
+       " '1-740703682',\n",
+       " '1-740723442',\n",
+       " '1-740726483',\n",
+       " '1-740739879',\n",
+       " '1-740749185',\n",
+       " '1-740751967',\n",
+       " '1-740767198',\n",
+       " '1-740771790',\n",
+       " '1-740829059',\n",
+       " '1-740842422']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trace_variants = df.groupby(\"case_seq_num\")[\"concept_name\"].apply(lambda seq: tuple(seq))\n",
+    "variants_counts= trace_variants.value_counts()\n",
+    "bad_cases = trace_variants[trace_variants == ('Accepted','Accepted')].index.tolist()\n",
+    "bad_cases"
    ]
   },
   {
